try fix undreadable font 2

--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,8 @@
 }
 
 body{
-    background-color: #191717 ;
+    background-color: #191717;
+    font-family: 'Poppins-SemiBold';
 }
 
 header{
